...
                                imageVector = navItem.selectedIcon,
                                contentDescription = stringResource(navItem.iconTextId),
                            )
                        },
                        label = { Text(stringResource(navItem.iconTextId)) },
                        modifier = Modifier
                            .testTag("NavItem")
                            .then(if (hasUnread) Modifier.notificationDot() else Modifier),
                    )
                }
            },
            windowAdaptiveInfo = windowAdaptiveInfo,
        ) {
...
